* 2014-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 33522: Wrong table was referenced in SQL statement to prepare table "user_attribute" to have UUID as primary key

* 2014-07-09 - marc.arens@open-xchange.com

 - Fix for bug 27301: A MembershipListener recognizes a leaving hazelcast node and triggers a cleanup for its resources
 
* 2014-07-09 - martin.schneider@open-xchange.com

 - Fix for bug 33201: improved output if parameter is missing

* 2014-07-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 33485: Don't attempt to delete an empty list of files

* 2014-07-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 32489: Exclude special messenger files and folders from drive synchronization

* 2014-07-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 33412: Use larger chunks when performing multipart uploads to S3 stores
 - Fix for bug 33422: Made the setting "com.openexchange.filestore.s3.[filestoreID].pathStyleAccess" officially available in the 
                      configuration file "filestore-s3.properties"  

* 2014-07-07 - thorben.betten@open-xchange.com

 - Attempt to fix bug 33200: Clear preview cache asynchronously

* 2014-07-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 33424: Add mpasswd file to list of properties files

* 2014-06-30 - lars.hoogestraat@open-xchange.com
 
 - Fix for bug #33314: Removed access restrictions which are not used

* 2014-06-25 - marcus.klein@open-xchange.com

 - Fix for bug 32860: Detect lousy clients writing always the same attribute values to the user object and avoid updating these values in
   the storage layer.

* 2014-06-25 - jan.bauerdick@open-xchange.com

 - Fix for bug 33004: Check if user has more permissions than to write own objects

* 2014-06-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33273: Switched to a root bucket name per S3 filestore registration and separate context data using fixed prefixes

* 2014-06-24 - marcus.klein@open-xchange.com
